adding modified k means clustering

--- a/Part 2/Clustering/K-means Clustering.ipynb
+++ b/Part 2/Clustering/K-means Clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -20,28 +20,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loan_df = pd.read_csv('CleanLoan.csv')"
+    "loan_df = pd.read_csv('Loan.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "k_mean = loan_df[['dti', 'annual_inc', 'risk_score', 'loan_amnt',\n",
+    "k_mean = loan_df[['dti', 'annual_inc', 'fico', 'loan_amnt',\n",
     "       'term', 'purpose','approval','emp_length', 'home_ownership']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -58,16 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1641127, 27)"
+       "(1640757, 27)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
       "text/plain": [
        "dti                           float64\n",
        "annual_inc                    float64\n",
-       "risk_score                    float64\n",
+       "fico                          float64\n",
        "loan_amnt                     float64\n",
        "term                            int64\n",
        "approval                        int64\n",
@@ -114,7 +114,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "    random_state=None, tol=0.0001, verbose=0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,16 +199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "923.12972527185673"
+       "843.86228211237938"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -299,98 +299,98 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A</th>\n",
-       "      <td>63694</td>\n",
-       "      <td>22184</td>\n",
-       "      <td>57451</td>\n",
-       "      <td>8865</td>\n",
-       "      <td>73</td>\n",
-       "      <td>40237</td>\n",
-       "      <td>78984</td>\n",
-       "      <td>355</td>\n",
+       "      <td>62287</td>\n",
+       "      <td>15675</td>\n",
+       "      <td>44518</td>\n",
+       "      <td>49853</td>\n",
+       "      <td>258</td>\n",
+       "      <td>27988</td>\n",
+       "      <td>6121</td>\n",
+       "      <td>65114</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>110856</td>\n",
-       "      <td>54998</td>\n",
-       "      <td>87010</td>\n",
-       "      <td>26196</td>\n",
-       "      <td>243</td>\n",
-       "      <td>82409</td>\n",
-       "      <td>121034</td>\n",
-       "      <td>1185</td>\n",
+       "      <td>102494</td>\n",
+       "      <td>40864</td>\n",
+       "      <td>68107</td>\n",
+       "      <td>92256</td>\n",
+       "      <td>846</td>\n",
+       "      <td>62852</td>\n",
+       "      <td>18927</td>\n",
+       "      <td>97492</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C</th>\n",
-       "      <td>102178</td>\n",
-       "      <td>77195</td>\n",
-       "      <td>72372</td>\n",
-       "      <td>45999</td>\n",
-       "      <td>441</td>\n",
-       "      <td>92491</td>\n",
-       "      <td>96288</td>\n",
-       "      <td>2380</td>\n",
+       "      <td>89004</td>\n",
+       "      <td>61035</td>\n",
+       "      <td>57994</td>\n",
+       "      <td>92048</td>\n",
+       "      <td>1711</td>\n",
+       "      <td>77543</td>\n",
+       "      <td>34438</td>\n",
+       "      <td>75411</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>D</th>\n",
-       "      <td>42626</td>\n",
-       "      <td>48461</td>\n",
-       "      <td>29209</td>\n",
-       "      <td>33814</td>\n",
-       "      <td>169</td>\n",
-       "      <td>45186</td>\n",
-       "      <td>36092</td>\n",
-       "      <td>1017</td>\n",
+       "      <td>35005</td>\n",
+       "      <td>41080</td>\n",
+       "      <td>23619</td>\n",
+       "      <td>41159</td>\n",
+       "      <td>718</td>\n",
+       "      <td>41240</td>\n",
+       "      <td>25248</td>\n",
+       "      <td>28446</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>E</th>\n",
-       "      <td>17209</td>\n",
-       "      <td>28873</td>\n",
-       "      <td>9068</td>\n",
-       "      <td>20865</td>\n",
-       "      <td>71</td>\n",
-       "      <td>22110</td>\n",
-       "      <td>12650</td>\n",
-       "      <td>483</td>\n",
+       "      <td>13586</td>\n",
+       "      <td>24748</td>\n",
+       "      <td>7364</td>\n",
+       "      <td>18139</td>\n",
+       "      <td>348</td>\n",
+       "      <td>22313</td>\n",
+       "      <td>15531</td>\n",
+       "      <td>9285</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>F</th>\n",
-       "      <td>5166</td>\n",
-       "      <td>11290</td>\n",
-       "      <td>2355</td>\n",
-       "      <td>7375</td>\n",
-       "      <td>21</td>\n",
-       "      <td>7373</td>\n",
-       "      <td>3452</td>\n",
-       "      <td>166</td>\n",
+       "      <td>3884</td>\n",
+       "      <td>9113</td>\n",
+       "      <td>1914</td>\n",
+       "      <td>5742</td>\n",
+       "      <td>118</td>\n",
+       "      <td>8238</td>\n",
+       "      <td>5661</td>\n",
+       "      <td>2520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>G</th>\n",
-       "      <td>1465</td>\n",
-       "      <td>3738</td>\n",
-       "      <td>450</td>\n",
-       "      <td>2111</td>\n",
-       "      <td>24</td>\n",
-       "      <td>2222</td>\n",
-       "      <td>793</td>\n",
-       "      <td>105</td>\n",
+       "      <td>1043</td>\n",
+       "      <td>2838</td>\n",
+       "      <td>361</td>\n",
+       "      <td>1689</td>\n",
+       "      <td>81</td>\n",
+       "      <td>2668</td>\n",
+       "      <td>1667</td>\n",
+       "      <td>555</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "kmean       0      1      2      3    4      5       6     7\n",
-       "grade                                                       \n",
-       "A       63694  22184  57451   8865   73  40237   78984   355\n",
-       "B      110856  54998  87010  26196  243  82409  121034  1185\n",
-       "C      102178  77195  72372  45999  441  92491   96288  2380\n",
-       "D       42626  48461  29209  33814  169  45186   36092  1017\n",
-       "E       17209  28873   9068  20865   71  22110   12650   483\n",
-       "F        5166  11290   2355   7375   21   7373    3452   166\n",
-       "G        1465   3738    450   2111   24   2222     793   105"
+       "kmean       0      1      2      3     4      5      6      7\n",
+       "grade                                                        \n",
+       "A       62287  15675  44518  49853   258  27988   6121  65114\n",
+       "B      102494  40864  68107  92256   846  62852  18927  97492\n",
+       "C       89004  61035  57994  92048  1711  77543  34438  75411\n",
+       "D       35005  41080  23619  41159   718  41240  25248  28446\n",
+       "E       13586  24748   7364  18139   348  22313  15531   9285\n",
+       "F        3884   9113   1914   5742   118   8238   5661   2520\n",
+       "G        1043   2838    361   1689    81   2668   1667    555"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,6 +398,15 @@
    "source": [
     "pd.crosstab(loan_df.grade,loan_df.kmean)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
