Cluster Csv Models

--- a/Part 2/Clustering/Clustering_Random_Forest.ipynb
+++ b/Part 2/Clustering/Clustering_Random_Forest.ipynb
@@ -16,12 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "import pandas as pd\n",
     "import pickle\n",
     "import numpy as np\n",
@@ -34,9 +36,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn import preprocessing, cross_validation\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "from sklearn import preprocessing, cross_validation"
    ]
   },
   {
@@ -48,46 +48,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "loan_df = pd.read_csv('/Users/sonalichaudhari/Desktop/Loan.csv', low_memory=False) \n",
-    "del loan_df['Unnamed: 0']"
+    "loan_df = pd.read_csv('/Users/sonalichaudhari/Desktop/Loan.csv', low_memory=False) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['id', 'debt_settlement_flag', 'application_type', 'fico_range_low',\n",
-       "       'fico_range_high', 'emp_length', 'dti', 'annual_inc', 'grade',\n",
-       "       'sub_grade', 'int_rate', 'loan_amnt', 'issue_d', 'purpose', 'State',\n",
-       "       'home_ownership', 'zip_code', 'policy_code', 'term', 'Year', 'Month',\n",
-       "       'fico', 'approval'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "loan_df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -124,9 +107,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -141,11 +124,6 @@
     "adr_states = pd.get_dummies(feature_df['State'], prefix='s')\n",
     "feature_df = feature_df.join(adr_states)\n",
     "feature_df.drop('State', axis=1, inplace=True)\n",
-    "\n",
-    "#debt_settlement_flag  \n",
-    "debt_settle_flg = pd.get_dummies(feature_df['debt_settlement_flag'], prefix='stlFlg')\n",
-    "feature_df = feature_df.join(debt_settle_flg)\n",
-    "feature_df.drop('debt_settlement_flag', axis=1, inplace=True)     \n",
     "\n",
     "#purpose   \n",
     "purpose = pd.get_dummies(feature_df['purpose'], prefix='purpose')\n",
@@ -162,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -173,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -186,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -202,19 +180,19 @@
        "           oob_score=False, random_state=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rf = RandomForestRegressor(n_estimators=60)#max_depth =6,random_state=0)\n",
+    "rf = RandomForestRegressor(n_estimators=60)\n",
     "rf.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -223,7 +201,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9158103281\n"
+      "0.91570957196\n"
      ]
     }
    ],
@@ -235,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -247,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -257,13 +235,13 @@
      "output_type": "stream",
      "text": [
       "-----Train-----\n",
-      "RMS:  1.3653576413677306\n",
-      "MAE:  1.02956180885\n",
-      "MAPE:  8.39008537442189\n",
+      "RMS:  1.3653917422006892\n",
+      "MAE:  1.02942860799\n",
+      "MAPE:  8.388974819000946\n",
       "-----Test-----\n",
-      "RMS:  3.6157727578370595\n",
-      "MAE:  2.76234479412\n",
-      "MAPE:  8.39008537442189\n"
+      "RMS:  3.621423338283415\n",
+      "MAE:  2.76597611817\n",
+      "MAPE:  22.567188962954894\n"
      ]
     }
    ],
@@ -281,8 +259,8 @@
     "#MAE, RMS, MAPE\n",
     "rms = sqrt(mean_squared_error(y_test, y_test_predicted))    \n",
     "mae_test = mean_absolute_error(y_test, y_test_predicted)\n",
-    "mape_test = np.mean(np.abs((y_test - y_test_predicted) / y_test)) * 100print\n",
-    "(\"-----Test-----\")\n",
+    "mape_test = np.mean(np.abs((y_test - y_test_predicted) / y_test)) * 100\n",
+    "print(\"-----Test-----\")\n",
     "print('RMS: ',rms)\n",
     "print('MAE: ',mae_test)\n",
     "print('MAPE: ',mape_test)"
@@ -297,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -320,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -514,7 +492,7 @@
        "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -544,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -553,15 +531,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.912500708014\n",
+      "0.911108546776\n",
       "-----Train-----\n",
-      "RMS:  0.9272504824609101\n",
-      "MAE:  0.632214384474\n",
-      "MAPE:  7.502982856450695\n",
+      "RMS:  0.9417753517711168\n",
+      "MAE:  0.635550693847\n",
+      "MAPE:  0.07504401234926672\n",
       "-----Test-----\n",
-      "RMS:  2.5490267288809436\n",
-      "MAE:  1.73045444353\n",
-      "MAPE:  20.331065149803614\n"
+      "RMS:  2.4391171684956174\n",
+      "MAE:  1.68122858885\n",
+      "MAPE:  0.1983450672983454\n"
      ]
     }
    ],
@@ -584,7 +562,7 @@
     "#MAE, RMS, MAPE\n",
     "rms = sqrt(mean_squared_error(y_train, y_train_predicted))    \n",
     "mae_train = mean_absolute_error(y_train, y_train_predicted) \n",
-    "mape_train = np.mean(np.abs((y_train - y_train_predicted) / y_train)) * 100\n",
+    "mape_train = np.mean(np.abs((y_train - y_train_predicted) / y_train))\n",
     "print(\"-----Train-----\")\n",
     "print('RMS: ',rms)\n",
     "print('MAE: ',mae_train)\n",
@@ -593,7 +571,7 @@
     "#MAE, RMS, MAPE\n",
     "rms = sqrt(mean_squared_error(y_test, y_test_predicted))    \n",
     "mae_test = mean_absolute_error(y_test, y_test_predicted)\n",
-    "mape_test = np.mean(np.abs((y_test - y_test_predicted) / y_test)) * 100\n",
+    "mape_test = np.mean(np.abs((y_test - y_test_predicted) / y_test))\n",
     "print(\"-----Test-----\")\n",
     "print('RMS: ',rms)\n",
     "print('MAE: ',mae_test)\n",
@@ -644,7 +622,7 @@
     "#MAE, RMS, MAPE\n",
     "rms = sqrt(mean_squared_error(y_train, y_train_predicted))    \n",
     "mae_train = mean_absolute_error(y_train, y_train_predicted) \n",
-    "mape_train = np.mean(np.abs((y_train - y_train_predicted) / y_train)) * 100\n",
+    "mape_train = np.mean(np.abs((y_train - y_train_predicted) / y_train))\n",
     "print(\"-----Train-----\")\n",
     "print('RMS: ',rms)\n",
     "print('MAE: ',mae_train)\n",
@@ -662,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -671,15 +649,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.906524048661\n",
+      "0.906580656282\n",
       "-----Train-----\n",
-      "RMS:  1.3058613344987609\n",
-      "MAE:  0.980578535877\n",
-      "MAPE:  8.977474505023931\n",
+      "RMS:  1.3074766892289085\n",
+      "MAE:  0.982107592976\n",
+      "MAPE:  0.08983705909746303\n",
       "-----Test-----\n",
-      "RMS:  3.452941052649615\n",
-      "MAE:  2.6302518139\n",
-      "MAPE:  24.109449922815536\n"
+      "RMS:  3.449707412935476\n",
+      "MAE:  2.62498282121\n",
+      "MAPE:  0.24078770827111284\n"
      ]
     }
    ],
@@ -702,7 +680,7 @@
     "#MAE, RMS, MAPE\n",
     "rms = sqrt(mean_squared_error(y_train, y_train_predicted))    \n",
     "mae_train = mean_absolute_error(y_train, y_train_predicted) \n",
-    "mape_train = np.mean(np.abs((y_train - y_train_predicted) / y_train)) * 100\n",
+    "mape_train = np.mean(np.abs((y_train - y_train_predicted) / y_train))\n",
     "print(\"-----Train-----\")\n",
     "print('RMS: ',rms)\n",
     "print('MAE: ',mae_train)\n",
@@ -711,7 +689,7 @@
     "#MAE, RMS, MAPE\n",
     "rms = sqrt(mean_squared_error(y_test, y_test_predicted))    \n",
     "mae_test = mean_absolute_error(y_test, y_test_predicted)\n",
-    "mape_test = np.mean(np.abs((y_test - y_test_predicted) / y_test)) * 100\n",
+    "mape_test = np.mean(np.abs((y_test - y_test_predicted) / y_test))\n",
     "print(\"-----Test-----\")\n",
     "print('RMS: ',rms)\n",
     "print('MAE: ',mae_test)\n",
@@ -720,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -729,15 +707,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.899470096252\n",
+      "0.899716618317\n",
       "-----Train-----\n",
-      "RMS:  1.4271983762261027\n",
-      "MAE:  1.08943011537\n",
-      "MAPE:  8.106339020466628\n",
+      "RMS:  1.4246667404404396\n",
+      "MAE:  1.08803070645\n",
+      "MAPE:  8.094641623609645\n",
       "-----Test-----\n",
-      "RMS:  3.7778662018819844\n",
-      "MAE:  2.92132096202\n",
-      "MAPE:  21.797629211090126\n"
+      "RMS:  3.7824351753660186\n",
+      "MAE:  2.92358161704\n",
+      "MAPE:  21.765301258555095\n"
      ]
     }
    ],
@@ -785,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -797,7 +775,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-655b83a90649>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#Create new column in load_df for the k-means clustering\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mk_mean_feature_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature_df\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mk_mean_feature_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'kMean'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mk_cluster\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabels_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-10-655b83a90649>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#Create new column in load_df for the k-means clustering\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mk_mean_feature_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature_df\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mk_mean_feature_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'kMean'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mk_cluster\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabels_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m/Users/sonalichaudhari/anaconda/lib/python3.5/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   2417\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2418\u001b[0m             \u001b[0;31m# set column\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2419\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_set_item\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2420\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2421\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_setitem_slice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Users/sonalichaudhari/anaconda/lib/python3.5/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m_set_item\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   2483\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2484\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ensure_valid_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2485\u001b[0;31m         \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_sanitize_column\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2486\u001b[0m         \u001b[0mNDFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_set_item\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2487\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Users/sonalichaudhari/anaconda/lib/python3.5/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m_sanitize_column\u001b[0;34m(self, key, value, broadcast)\u001b[0m\n\u001b[1;32m   2654\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2655\u001b[0m             \u001b[0;31m# turn me into an ndarray\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2656\u001b[0;31m             \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_sanitize_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2657\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2658\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -927,7 +905,7 @@
     "#MAE, RMS, MAPE\n",
     "rms = sqrt(mean_squared_error(y_train, y_train_predicted))    \n",
     "mae_train = mean_absolute_error(y_train, y_train_predicted) \n",
-    "mape_train = np.mean(np.abs((y_train - y_train_predicted) / y_train)) * 100\n",
+    "mape_train = np.mean(np.abs((y_train - y_train_predicted) / y_train))\n",
     "print('-----K-MEANS-----')\n",
     "print(\"-----Train-----\")\n",
     "print('RMS: ',rms)\n",
@@ -937,7 +915,7 @@
     "#MAE, RMS, MAPE\n",
     "rms = sqrt(mean_squared_error(y_test, y_test_predicted))    \n",
     "mae_test = mean_absolute_error(y_test, y_test_predicted)\n",
-    "mape_test = np.mean(np.abs((y_test - y_test_predicted) / y_test)) * 100print\n",
+    "mape_test = np.mean(np.abs((y_test - y_test_predicted) / y_test)) \n",
     "(\"-----Test-----\")\n",
     "print('RMS: ',rms)\n",
     "print('MAE: ',mae_test)\n",
@@ -999,7 +977,7 @@
     "#MAE, RMS, MAPE\n",
     "rms = sqrt(mean_squared_error(y_train, y_train_predicted))    \n",
     "mae_train = mean_absolute_error(y_train, y_train_predicted) \n",
-    "mape_train = np.mean(np.abs((y_train - y_train_predicted) / y_train)) * 100\n",
+    "mape_train = np.mean(np.abs((y_train - y_train_predicted) / y_train))\n",
     "print('-----K-MEANS-----')\n",
     "print(\"-----Train-----\")\n",
     "print('RMS: ',rms)\n",
@@ -1009,7 +987,7 @@
     "#MAE, RMS, MAPE\n",
     "rms = sqrt(mean_squared_error(y_test, y_test_predicted))    \n",
     "mae_test = mean_absolute_error(y_test, y_test_predicted)\n",
-    "mape_test = np.mean(np.abs((y_test - y_test_predicted) / y_test)) * 100\n",
+    "mape_test = np.mean(np.abs((y_test - y_test_predicted) / y_test))\n",
     "print(\"-----Test-----\")\n",
     "print('RMS: ',rms)\n",
     "print('MAE: ',mae_test)\n",
