adding modified nn prediction

--- a/Part 2/Clustering/Clustering_Neural_Networks.ipynb
+++ b/Part 2/Clustering/Clustering_Neural_Networks.ipynb
@@ -58,7 +58,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "loan_df = pd.read_csv('../Loan.csv', low_memory=False) "
@@ -101,7 +103,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "feature_df = loan_df[['application_type','emp_length', 'dti', 'annual_inc',\n",
@@ -111,7 +115,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "home_ownerships = pd.get_dummies(feature_df['home_ownership'], prefix='house')\n",
@@ -142,7 +148,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "zero_cluster_df = feature_df"
@@ -211,7 +219,9 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y_test_predicted = nn.predict(X_test)\n",
@@ -269,7 +279,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "manual_df = feature_df\n",
@@ -493,7 +505,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Seperate into diff dataframes\n",
@@ -559,7 +573,7 @@
     "mape_test = np.mean(np.abs((y_test - y_test_predicted) / y_test)) * 100\n",
     "print(\"-----Test-----\")\n",
     "print('RMS: ',rms)\n",
-    "print('MAE: ',mae_test)\n",
+    "print('MAE: ',mae_test) \n",
     "print('MAPE: ',mape_test)"
    ]
   },
@@ -756,7 +770,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "kmean_0 = k_mean_feature_df[k_mean_feature_df['kMean']==0]\n",
