Cleaned and combined for Luigi

--- a/Project/Sonali/Cleaning_Luigi.ipynb
+++ b/Project/Sonali/Cleaning_Luigi.ipynb
@@ -190,7 +190,7 @@
     "\n",
     "    dt = dt[dt['Cancelled']!=1]\n",
     "\n",
-    "    dt = dt[dt['ArrDelayMinutes'].notnull() & p['ActualElapsedTime'].notnull() & p['ArrDelayMinutes'].notnull() & p['ArrDel15'].notnull()]\n",
+    "    dt = dt[dt['ArrDelayMinutes'].notnull() & dt['ActualElapsedTime'].notnull() & dt['ArrDelayMinutes'].notnull() & dt['ArrDel15'].notnull()]\n",
     "\n",
     "    dt['Status'] = 0\n",
     "    dt.loc[dt.DepDel15==1.0,'Status'] = 1\n",
