adding changes to weather data

--- a/Project/2016_10_stations_Weather_data.ipynb
+++ b/Project/2016_10_stations_Weather_data.ipynb
@@ -28,7 +28,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def daily_data_2016(station_name):\n",
@@ -324,7 +326,7 @@
     "        dec_df.Visibility = dec_df.Visibility.replace({'   - ':dec_df.Visibility.mode()[0]})\n",
     "        dec_df.Wind = dec_df.Wind.replace({'   - ':dec_df.Visibility.mode()[0]})\n",
     "   \n",
-    "    df2016 = pd.concat([jan_df, feb_df, mar_df, apr_df, may_df, jun_df, jul_df, aug_df, sep_df, oct_df], ignore_index=True)\n",
+    "    df2016 = pd.concat([jan_df, feb_df, mar_df, apr_df, may_df, jun_df, jul_df, aug_df, sep_df, oct_df, nov_df, dec_df], ignore_index=True)\n",
     "    df2016 = df2016[['month','day','Visibility','Wind','Precip']]\n",
     "    df2016[['month','day','Visibility','Wind']] = df2016[['month','day','Visibility','Wind']].astype(int)\n",
     "    df2016[['Precip']] = df2016[['Precip']].astype(float)\n",
