--- a/Project/2017_10_station_weather.ipynb
+++ b/Project/2017_10_station_weather.ipynb
@@ -133,14 +133,6 @@
     "        sep_df.Precip = sep_df.Precip.replace({' T ':0})\n",
     "        sep_df.Visibility = sep_df.Visibility.replace({'   - ':sep_df.Visibility.mode()[0]})\n",
     "        sep_df.Wind = sep_df.Wind.replace({'   - ':sep_df.Visibility.mode()[0]})\n",
-    "\n",
-    "        oct_df = df3.iloc[291:323,:9]\n",
-    "        oct_df = oct_df.iloc[1:-1]\n",
-    "        oct_df['month'] = 10\n",
-    "        oct_df.Precip = oct_df.Precip.replace({'   - ':oct_df.Precip.mode()[0]})\n",
-    "        oct_df.Precip = oct_df.Precip.replace({' T ':0})\n",
-    "        oct_df.Visibility = oct_df.Visibility.replace({'   - ':oct_df.Visibility.mode()[0]})\n",
-    "        oct_df.Wind = oct_df.Wind.replace({'   - ':oct_df.Visibility.mode()[0]})\n",
     "    else:\n",
     "        #2017 data denver\n",
     "        jan_df = df3.iloc[0:33,:9]\n",
@@ -264,22 +256,8 @@
     "        sep_df.Precip = sep_df.Precip.replace({'avg':mode})\n",
     "        sep_df.Visibility = sep_df.Visibility.replace({'   - ':sep_df.Visibility.mode()[0]})\n",
     "        sep_df.Wind = sep_df.Wind.replace({'   - ':sep_df.Visibility.mode()[0]})\n",
-    "\n",
-    "        oct_df = df3.iloc[276:316,:9]\n",
-    "        oct_df = oct_df.iloc[1:-1]\n",
-    "        oct_df['month'] = 10\n",
-    "        no_invalid = oct_df[oct_df.Precip != '   - ']\n",
-    "        no_invalid = no_invalid[no_invalid.Precip != 'None']\n",
-    "        no_invalid = no_invalid[no_invalid.Precip != 'avg']\n",
-    "        mode = no_invalid.Precip.mode()[0]\n",
-    "        oct_df.Precip = oct_df.Precip.replace({'   - ':mode})\n",
-    "        oct_df.Precip = oct_df.Precip.replace({' T ':0})\n",
-    "        oct_df.Precip = oct_df.Precip.replace({'None':mode})\n",
-    "        oct_df.Precip = oct_df.Precip.replace({'avg':mode})\n",
-    "        oct_df.Visibility = oct_df.Visibility.replace({'   - ':oct_df.Visibility.mode()[0]})\n",
-    "        oct_df.Wind = oct_df.Wind.replace({'   - ':oct_df.Visibility.mode()[0]})\n",
     "        \n",
-    "    df2017 = pd.concat([jan_df, feb_df, mar_df, apr_df, may_df, jun_df, jul_df, aug_df, sep_df, oct_df], ignore_index=True)\n",
+    "    df2017 = pd.concat([jan_df, feb_df, mar_df, apr_df, may_df, jun_df, jul_df, aug_df, sep_df], ignore_index=True)\n",
     "    df2017 = df2017[['month','day','Visibility','Wind','Precip']]\n",
     "    df2017[['month','day','Visibility','Wind']] = df2017[['month','day','Visibility','Wind']].astype(int)\n",
     "    df2017[['Precip']] = df2017[['Precip']].astype(float)\n",
